add statistic route
